[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cwt"
version = "2.7.4"
description = "A Python implementation of CWT/COSE."
authors = ["Ajitomi Daisuke <dajiaji@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dajiaji/python-cwt"

include = [
  "CHANGES.rst",
  "docs",
  "poetry.lock",
  "samples",
  "tests",
  "tox.ini",
]

exclude = [
  "docs/_build",
]

[tool.poetry.dependencies]
python = "^3.8"
asn1crypto = "^1.4.0"
cbor2 = "^5.4.2"
certvalidator = "^0.11.1"
cryptography = ">=42.0.1,<43"
Sphinx = {version = ">=7.1,<8", optional = true, extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.25.2", optional = true, extras = ["docs"]}
sphinx-rtd-theme = {version = ">=1,<3", optional = true, extras = ["docs"]}
pyhpke = ">=0.5.3,<1.0.0"

[tool.poetry.extras]
docs = [
  "Sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1.0"
tox = "^4.12.1"
pre-commit = "^3.5.0"

[tool.mypy]
ignore_missing_imports = true
