[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cwt"
version = "2.8.0"
description = "A Python implementation of CWT/COSE."
authors = ["Ajitomi Daisuke <dajiaji@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dajiaji/python-cwt"

include = [
  "CHANGES.rst",
  "docs",
  "poetry.lock",
  "samples",
  "tests",
  "tox.ini",
]

exclude = [
  "docs/_build",
]

[tool.poetry.dependencies]
python = "^3.9"
asn1crypto = "^1.4.0"
cbor2 = "^5.4.2"
certvalidator = "^0.11.1"
cryptography = ">=42.0.1,<44"
Sphinx = {version = ">=7.1,<8", optional = true, extras = ["docs"]}
sphinx-autodoc-typehints = {version = ">=1.25.2,<3.0.0", optional = true, extras = ["docs"]}
sphinx-rtd-theme = {version = ">=1,<4", optional = true, extras = ["docs"]}
pyhpke = ">=0.5.3,<1.0.0"

[tool.poetry.extras]
docs = [
  "Sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-cov = "^5.0.0"
tox = "^4.23.2"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
docutils = "^0.21.2"

[tool.mypy]
ignore_missing_imports = true
